Fix homepage URL for correct GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Pathum-Vimukthi-Kumara/portfolio",
+  "homepage": "https://pathum-vimukthi-kumara.github.io/portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
